postgres_tests/create_function_c/expected.txt

-----------
QUERY:
--
-- CREATE_FUNCTION_C
--
-- This script used to create C functions for other scripts to use.
-- But to get rid of the ordering dependencies that caused, such
-- functions are now made either in test_setup.sql or in the specific
-- test script that needs them.  All that remains here is error cases.

-- directory path and dlsuffix are passed to us in environment variables
-- \getenv libdir PG_LIBDIR
-- \getenv dlsuffix PG_DLSUFFIX

-- \set regresslib /* REPLACED */ PG_LIBDIR '/regress' /* REPLACED */ PG_DLSUFFIX

--
-- Check LOAD command.  (The alternative of implicitly loading the library
-- is checked in many other test scripts.)
--
LOAD /* REPLACED */ PG_LIBDIR '/regress' PG_DLSUFFIX;
RESULT:
	[]

-----------
QUERY:


-- Things that shouldn/* REPLACED */ ''t work:

CREATE FUNCTION test1 (int) RETURNS int LANGUAGE C
    AS 'nosuchfile';
RESULT:
	ERROR - could not access file "nosuchfile": Datei oder Verzeichnis nicht gefunden


-----------
QUERY:


-- To produce stable regression test output, we have to filter the name
-- of the regresslib file out of the error message in this test.
-- \set VERBOSITY sqlstate
CREATE FUNCTION test1 (int) RETURNS int LANGUAGE C
    AS /* REPLACED */ PG_LIBDIR '/regress' PG_DLSUFFIX, 'nosuchsymbol';
RESULT:
	ERROR - could not find function "nosuchsymbol" in file "/home/keuscha/Documents/FS2024/AST/project/postgresql/src/test/regress/regress.so"


-----------
QUERY:

-- \set VERBOSITY default
SELECT regexp_replace(:'LAST_ERROR_MESSAGE', 'file ".*"', 'file "..."');
RESULT:
	ERROR - syntax error at or near ":"
LINE 3: SELECT regexp_replace(:'LAST_ERROR_MESSAGE', 'file ".*"', 'f...
                              ^


-----------
QUERY:


CREATE FUNCTION test1 (int) RETURNS int LANGUAGE internal
    AS 'nosuch';
RESULT:
	ERROR - there is no built-in function named "nosuch"

